ADDED some corrections

--- a/Jonathan_Fokkan_Resume.tex
+++ b/Jonathan_Fokkan_Resume.tex
@@ -78,7 +78,7 @@
 \hyphenpenalty=1000
 \begin{description*}
 	\item[Languages:]
-	Scala, Java, C\#, Python, Go, shell, Haskell, HTML/CSS, SQL, \LaTeX, SML
+	Scala, Go, Java, C\#, Python, shell, Haskell, HTML/CSS, SQL, C, C\texttt{++}, \LaTeX, SML
 	\item[Tools:]
         Eclipse, Emacs, Git, Mercurial
         \item[Paradigms:]
@@ -150,7 +150,7 @@
                     the progress, competition results and records}}
 		{\emph{}}
 	\begin{itemize*}
-		\item Scala project with the Play framwork
+		\item Scala project with the Play framework
 		\item Backend in PostgreSQL with the Slick Functional Relational Mapping library
                 \item Front-end made using Bootstrap and JQuery
                 \item Repository at \url{https://github.com/jonfk/ssmu-powerlifting-play}
@@ -169,7 +169,7 @@
 	\begin{itemize*}
 		\item Scala project with the AKKA framework
 		\item Backend in Spray with eclipse aether library to crawl the Maven Repository
-                \item Front-end made using Bootstrap, JQuery and AngularJS
+                \item Front-end made using Bootstrap, JQuery, AngularJS and D3.js
                 \item A root xml is crawled and parsed which points to xml files that are recursively
                   parsed to show the contents and relationships between Opendaylight projects in
                   terms of Karaf features
@@ -178,16 +178,15 @@
 
 	\item
 	\headerrow
-		{\textbf{Purely Functional Dynamic language}}
+		{\textbf{Dynamic Functional Programming language}}
 		{\emph{Work In Progress}}
 	\\
 	\headerrow
 		{\emph{A purely functional dynamic programming language with ML like syntax in Go}}
 		{\emph{}}
 	\begin{itemize*}
-		\item Lexer and parser are hand written in Go.
-                \item Concurrent lexer similar to the Go lexer
-                \item Recursive descent parser done manually
+		\item Lexer and parser are hand written in Go
+                \item Concurrent lexer and recursive descent parser
                 \item Work in Progress with only expressions currently working
                 \item Repository at \url{https://github.com/jonfk/calc}
 	\end{itemize*}
@@ -233,7 +232,7 @@
 		{\emph{}}
 	\begin{itemize*}
 		\item Used android talk back features to provide a usable interface for the visually impaired
-		\item Developped with a user centered design approach
+		\item Developed with a user centered design approach
 		\item Tested with the help of several visually impaired users
 	\end{itemize*}
         % End Project
@@ -273,7 +272,7 @@
 	\\
 	\headerrow
 		{\emph{Software Developer}}
-		{\emph{May 2014 -- }}
+		{\emph{May 2014 -- Current}}
 	\begin{itemize*}
 		\item Customize and build CoreOS to run as an SDN controller appliance
                 \item Created the an update manager in Go based on the Omaha protocol for the appliance
