ADDED new work experience at OMSignal

--- a/Jonathan_Fokkan_Resume.tex
+++ b/Jonathan_Fokkan_Resume.tex
@@ -267,12 +267,27 @@
 
 	\item
 	\headerrow
+		{\textbf{OMSignal Inc.}}
+		{\textbf{Montr\'{e}al, QC}}
+	\\
+	\headerrow
+		{\emph{Software Developer}}
+		{\emph{March 2015 -- Current}}
+	\begin{itemize*}
+	        \item Scala Backend engineer
+                \item IOS development
+                \item Adding features to the core product relating to user workouts, data and Key Performance Indicators
+	\end{itemize*}
+        % End of Job
+
+	\item
+	\headerrow
 		{\textbf{Inocybe Technologies Inc.}}
 		{\textbf{Montr\'{e}al, QC}}
 	\\
 	\headerrow
 		{\emph{Software Developer}}
-		{\emph{May 2014 -- Current}}
+		{\emph{May 2014 -- March 2015}}
 	\begin{itemize*}
 		\item Customize and build CoreOS to run as an SDN controller appliance
                 \item Created the an update manager in Go based on the Omaha protocol for the appliance
