Update: OMsignal experience

--- a/Jonathan_Fokkan_Resume.tex
+++ b/Jonathan_Fokkan_Resume.tex
@@ -260,7 +260,8 @@
                 \item Worked in an Agile process with the Scrum Methodology
 	        \item Scala Backend engineer
                   \begin{itemize*}
-                    \item Worked on an AKKA reactive backend in a microservice architecture using MongoDB as datastore
+                    \item Worked on an AKKA reactive backend in a microservice architecture
+                    \item Implemented features in an Event Sourced and CQRS architected backend
                     \item Integrated a data pipeline to a Key Performance Indicators(KPI) module which used InfluxDB as metrics database for analytics
                     \item Implemented website to display analytics from InfluxDB to display KPIs with meaningful information about status app usage
                     \item Modularized a monolithic data pipeline into microservices
