Updated Work Experience section

--- a/Jonathan_Fokkan_Resume.tex
+++ b/Jonathan_Fokkan_Resume.tex
@@ -78,11 +78,11 @@
 \hyphenpenalty=1000
 \begin{description*}
 	\item[Languages:]
-	Scala, Go, Java, C\#, Python, shell, Haskell, HTML/CSS, SQL, C, C\texttt{++}, \LaTeX, SML
+	Scala, Go, Java, C\#, Python, Javascript, shell, HTML/CSS, SQL, C, \LaTeX, SML
 	\item[Tools:]
         Git, IntelliJ, Emacs, Eclipse, Vim
         \item[Paradigms:]
-        Object Oriented, Functional, Declarative, Imperative
+        Object Oriented, Functional, Declarative, Imperative, Functional Reactive (FRP)
         \item[Design:]
         UML, ER Model
 \end{description*}
@@ -254,24 +254,15 @@
 		{\textbf{Montr\'{e}al, QC}}
 	\\
 	\headerrow
-		{\emph{Software Developer}}
+		{\emph{Full Stack Software Developer}}
 		{\emph{March 2015 -- Current}}
+	\begin{description*}
+                \item[Technologies used:] Scala/Akka, ObjectiveC/Swift, Go, Javascript/React, Docker
+	\end{description*}
 	\begin{itemize*}
-                \item Worked in an Agile process with the Scrum Methodology
-	        \item Scala Backend engineer
-                  \begin{itemize*}
-                    \item Worked on an AKKA reactive backend in a microservice architecture
-                    \item Implemented features in an Event Sourced and CQRS architected backend
-                    \item Integrated a data pipeline to a Key Performance Indicators(KPI) module which used InfluxDB as metrics database for analytics
-                    \item Implemented website to display analytics from InfluxDB to display KPIs with meaningful information about status app usage
-                    \item Modularized a monolithic data pipeline into microservices
-                  \end{itemize*}
-                \item IOS development
-                  \begin{itemize*}
-                    \item Implemented features for a production IOS App in Objective-C sold on the Apple App Store
-                    \item Tests and Integration tests written in Swift
-                    \item Used Protobuf and JSON for client-server communication to sync critical data
-                  \end{itemize*}
+                \item OMsignal is a wearable tech company with an ios app that tracks the user's biometric signals
+                \item Led the implementation of Key Performance Indicators based on the data from our backend to gain insight into how users were reacting to our product
+                \item Devised and implemented interconnection from the ios app and backend to third party services such as Strava, Nike+ and UnderArmour
 	\end{itemize*}
         % End of Job
 
@@ -283,13 +274,16 @@
 	\headerrow
 		{\emph{Software Developer}}
 		{\emph{May 2014 -- March 2015}}
+	\begin{description*}
+                \item[Technologies used:] Docker, Go, Scala/Akka/Play framework, Java/OSGi, Javascript/AngularJS
+	\end{description*}
 	\begin{itemize*}
-		\item Customize and build CoreOS(a minimal linux distribution) to run as an SDN controller appliance
-                \item Designed and implemented an update manager in Go based on the Omaha protocol for a custom environment
+		\item Customized and built CoreOS (a minimal linux distribution) to run as an SDN controller appliance
+                \item Implemented an update manager in Go based on Google's Omaha protocol for our integrated software product
                 \item Designed and implemented a Continuous Integration pipeline
 	          \begin{itemize*}
                     \item Implemented using GoCD with a small cluster of workers
-                    \item Used Docker for isolation environments of builds
+                    \item Using Docker for isolating build environments
                     \item CI pipeline ran tests, build code and pushed build artifacts to Artifactory repository
 	          \end{itemize*}
                 \item Created a project explorer for the Opendaylight project showing the karaf features and dependencies of modules in a complex project
@@ -305,10 +299,10 @@
 		{\emph{Research Intern}}
 		{\emph{Summer 2012}}
 	\begin{itemize*}
-		\item Learn about various distributed database systems
-		\item Write benchmarks to compare hadoop+hive, MySQL cluster and VoltDB
-		\item Extend existing distributed database framework
-		\item Set up and maintain cluster of about 10 linux machines
+		\item Research project investigating the performance of at the time popular distributed databases for Data Warehousing use cases
+		\item Wrote benchmarks to compare hadoop+hive, MySQL cluster and VoltDB
+		\item Extended an inhouse framework for a distributed database based on MySQL
+		\item Set up and maintained a cluster of about 10 linux machines for our work
 	\end{itemize*}
         % End of Job
 
@@ -323,7 +317,7 @@
 \begin{description*}
         \item[]Member of IEEE, McGill Branch (2011 -- Present)
         \item[]Powerlifting (Member of Qu\'{e}bec Powerlifting Federation) \& Cycling
-        \item[]Photography \& Web design
+        \item[]Photography
 \end{description*}
 \end{indentsection}
 
