Shortened Experience Inocybe CI

--- a/Jonathan_Fokkan_Resume.tex
+++ b/Jonathan_Fokkan_Resume.tex
@@ -174,9 +174,8 @@
                 \item Implemented an update manager in Go based on Google's Omaha protocol for our integrated software product
                 \item Designed and implemented a Continuous Integration pipeline
 	          \begin{itemize*}
-                    \item Implemented using GoCD with a small cluster of workers
                     \item Using Docker for isolating build environments
-                    \item CI pipeline ran tests, build code and pushed build artifacts to Artifactory repository
+                    \item CI pipeline ran on a small cluster using GoCD
 	          \end{itemize*}
                 \item Created a project explorer for the Opendaylight project showing the karaf features and dependencies of modules in a complex project
 	\end{itemize*}
