Added  icons to header

--- a/Jonathan_Fokkan_Resume.tex
+++ b/Jonathan_Fokkan_Resume.tex
@@ -9,6 +9,7 @@
 \usepackage{textcomp}
 \usepackage{tgpagella}
 \usepackage{hyperref}
+\usepackage{fontawesome}
 \pagestyle{empty}
 \setlength{\tabcolsep}{0em}
 
@@ -50,8 +51,11 @@
 \ \ Apt\ 323\ \ \textbullet
 \ \ Montr\'{e}al, QC H4L 0A5
 \\
-(514) 963-2699\ \ \textbullet
-\ \ jfokkan@gmail.com
+\faPhone \ (514) 963-2699\ \ \textbullet
+\ \ \faEnvelope \ jfokkan@gmail.com
+\\
+\faGithub \ \url{https://github.com/jonfk} \ \textbullet
+\ \ \faLinkedin \ \url{https://ca.linkedin.com/in/jonfk}
 \end{center}
 
 % Double-line for start and end of epigraph.
