--- a/Jonathan_Fokkan_Resume.tex
+++ b/Jonathan_Fokkan_Resume.tex
@@ -73,7 +73,7 @@
 %\hyphenpenalty=1000
 \begin{description*}
 	\item[Languages:]
-        French, English and Cr\'{e}ole
+        French, English and (Mauritian) Cr\'{e}ole
 \end{description*}
 %\end{indentsection}
 
@@ -217,8 +217,8 @@
 		{\emph{March 2015}}
 	\\
 	\headerrow
-		{\emph{A team website for the SSMU powerlifting team at McGill to show team members'
-                    the progress, competition results and records}}
+		{\emph{A team website for the SSMU powerlifting team at McGill to show team members'}
+                  \\ \emph{progress, competition results and records}}
 		{\emph{}}
 	\begin{itemize*}
 		\item Scala project with the Play framework
@@ -230,26 +230,8 @@
 
 	\item
 	\headerrow
-		{\textbf{Opendaylight Project Explorer}}
-		{\emph{January 2015}}
-	\\
-	\headerrow
-		{\emph{An xml and Maven Repository file crawler for the Opendaylight Project}}
-		{\emph{}}
-	\begin{itemize*}
-		\item Scala project with the AKKA framework
-		\item Backend in Spray with eclipse aether library to crawl the Maven Repository
-                \item Front-end made using Bootstrap, JQuery, AngularJS and D3.js
-                \item A root xml is crawled and parsed which points to xml files that are recursively
-                  parsed to show the contents and relationships between Opendaylight projects in
-                  terms of Karaf features
-	\end{itemize*}
-        % End Project
-
-	\item
-	\headerrow
 		{\textbf{Dynamic Functional Programming language}}
-		{\emph{2015 - Work In Progress}}
+		{\emph{Summer 2015}}
 	\\
 	\headerrow
 		{\emph{A purely functional dynamic programming language with ML like syntax in Go}}
@@ -257,7 +239,6 @@
 	\begin{itemize*}
 		\item Lexer and parser are hand written in Go
                 \item Concurrent lexer and recursive descent parser
-                \item Work in Progress with only expressions currently working
                 \item Repository at \url{https://github.com/jonfk/calc}
 	\end{itemize*}
         % End Project
