Added http-loupe to projects

--- a/Jonathan_Fokkan_Resume.tex
+++ b/Jonathan_Fokkan_Resume.tex
@@ -1,4 +1,5 @@
 % resume.tex
+
 % vim:set ft=tex spell:
 
 \documentclass[10pt,letterpaper]{article}
@@ -153,7 +154,7 @@
 		{\emph{Full Stack Software Developer}}
 		{\emph{March 2015 -- Current}}
 	\begin{description*}
-                \item[Technologies used:] Scala/Akka, ObjectiveC/Swift, Go, Javascript/React, Docker
+                \item[Technologies used:] Scala/Akka, ObjectiveC/Swift, Go, Javascript/React, D3.js, Docker, Kafka, MongoDB
 	\end{description*}
 	\begin{itemize*}
                 \item OMsignal is a wearable tech company with an ios app that tracks the user's biometric signals
@@ -210,6 +211,22 @@
 
 \begin{itemize}
 	\parskip=0.1em
+
+	\item
+	\headerrow
+		{\textbf{http-loupe: http requests inspector and debugger}}
+		{\emph{January 2016}}
+	\\
+	\headerrow
+		{\emph{A command line tool to save, view, and send http requests}}
+		{\emph{}}
+	\begin{itemize*}
+		\item Go project
+                \item Created to debug problems interfacing with particularly capricious 3rd party REST apis
+                \item Allowed me to quickly find the exact source of problems with my http requests
+                \item Source code at \url{https://github.com/jonfk/http-loupe}
+	\end{itemize*}
+        % End Project
 
 	\item
 	\headerrow
