Removed Personal Projects

--- a/Jonathan_Fokkan_Resume.tex
+++ b/Jonathan_Fokkan_Resume.tex
@@ -175,7 +175,7 @@
                 \item[Technologies used:] Docker, Go, Scala/Akka/Play framework, Java/OSGi, Javascript/AngularJS
 	\end{description*}
 	\begin{itemize*}
-		\item Customized and built CoreOS (a minimal linux distribution) to run as an SDN controller appliance
+		\item Led the implementation of a custom build linux distribution based on CoreOS to run as an SDN controller appliance
                 \item Implemented an update manager in Go based on Google's Omaha protocol for our integrated software product
                 \item Designed and implemented a Continuous Integration pipeline
 	          \begin{itemize*}
@@ -201,111 +201,6 @@
 		\item Set up and maintained a cluster of about 10 linux machines for our work
 	\end{itemize*}
         % End of Job
-
-\end{itemize}
-
-
-\hrule
-\vspace{-0.4em}
-\subsection*{SELECTED PROJECTS}
-
-\begin{itemize}
-	\parskip=0.1em
-
-	\item
-	\headerrow
-		{\textbf{http-loupe: http requests inspector and debugger}}
-		{\emph{January 2016}}
-	\\
-	\headerrow
-		{\emph{A command line tool to save, view, and send http requests}}
-		{\emph{}}
-	\begin{itemize*}
-		\item Go project
-                \item Created to debug problems interfacing with particularly capricious 3rd party REST apis
-                \item Allowed me to quickly find the exact source of problems with my http requests
-                \item Source code at \url{https://github.com/jonfk/http-loupe}
-	\end{itemize*}
-        % End Project
-
-	\item
-	\headerrow
-		{\textbf{SSMU Powerlifting Team Website}}
-		{\emph{March 2015}}
-	\\
-	\headerrow
-		{\emph{A team website for the SSMU powerlifting team at McGill to show team members'}
-                  \\ \emph{progress, competition results and records}}
-		{\emph{}}
-	\begin{itemize*}
-		\item Scala project with the Play framework
-		\item Backend in PostgreSQL with the Slick Functional Relational Mapping library
-                \item Front-end made using Bootstrap and JQuery
-                \item Repository at \url{https://github.com/jonfk/ssmu-powerlifting-play}
-	\end{itemize*}
-        % End Project
-
-	\item
-	\headerrow
-		{\textbf{Dynamic Functional Programming language}}
-		{\emph{Summer 2015}}
-	\\
-	\headerrow
-		{\emph{A purely functional dynamic programming language with ML like syntax in Go}}
-		{\emph{}}
-	\begin{itemize*}
-		\item Lexer and parser are hand written in Go
-                \item Concurrent lexer and recursive descent parser
-                \item Repository at \url{https://github.com/jonfk/calc}
-	\end{itemize*}
-        % End Project
-
-	\item
-	\headerrow
-		{\textbf{McGill Robotics Simulation Team}}
-		{\emph{Winter 2013}}
-	\\
-	\headerrow
-		{\emph{A simulation environment to test computer vision, path planning and control of an underwater robot}}
-		{\emph{}}
-	\begin{itemize*}
-		\item Team Project of 2 people
-		\item Simulation environment was built using Gazebo and ROS in C\texttt{++}
-		\item Simulate approximate behaviour of objects without fluid dynamics
-		\item Interface simulation with control systems and path planning
-	\end{itemize*}
-        % End Project
-
-	\item
-	\headerrow
-		{\textbf{Honours Thesis: Fault Tolerance in Software Defined Networks}}
-		{\emph{Winter 2013}}
-	\\
-	\headerrow
-		{\emph{Implement and test a method of replicating OpenFlow Controllers in a Software Defined Network}}
-		{\emph{}}
-	\begin{itemize*}
-		\item Used Mininet as a testing environment
-		\item Modified OpenFlow switches using python to implement a polling mechanism to test which controller to use
-                \item Implemented a fallback algorithm for OpenFlow switches to improve fault tolerance
-	\end{itemize*}
-        % End Project
-
-	\item
-	\headerrow
-		{\textbf{Android Directional application for the visually impaired}}
-		{\emph{Winter 2013}}
-	\\
-	\headerrow
-		{\emph{An application that provides audio cues and directions to navigate urban environments}}
-		{\emph{}}
-	\begin{itemize*}
-		\item Used android talk back features to provide a usable interface for the visually impaired
-		\item Designed in a User Centered Design approach focussed on iterative feedback from users
-		\item Developped while testing with the help of several visually impaired users
-                \item App developped using Java
-	\end{itemize*}
-        % End Project
 
 \end{itemize}
 
