Updated Omsignal experience

--- a/Jonathan_Fokkan_Resume.tex
+++ b/Jonathan_Fokkan_Resume.tex
@@ -158,7 +158,8 @@
 	\end{description*}
 	\begin{itemize*}
                 \item OMsignal is a wearable tech company with an ios app that tracks the user's biometric signals
-                \item Led the implementation of Key Performance Indicators based on the data from our backend to gain insight into how users were reacting to our product
+                \item Lead the design and implementation of new algorithms processing backend which lead to improved processing times of 90\%
+                \item Led the implementation of Key Performance Indicators based on the data from our backend to gain insight into features improving user retention
                 \item Devised and implemented interconnection from the ios app and backend to third party services such as Strava, Nike+ and UnderArmour
 	\end{itemize*}
         % End of Job
