Update resume with some appdirect experience

--- a/Jonathan_Fokkan_Resume.tex
+++ b/Jonathan_Fokkan_Resume.tex
@@ -83,7 +83,7 @@
 \hyphenpenalty=1000
 \begin{description*}
 	\item[Languages:]
-	Scala, Go, Java, C\#, Python, Javascript, shell, HTML/CSS, SQL, C, \LaTeX, SML
+	Rust, Java, Elm, Scala, Go, C\#, Python, Javascript, shell, HTML/CSS, SQL, C, \LaTeX, SML
 	\item[Tools:]
         Git, IntelliJ, Emacs, Eclipse, Vim
         \item[Paradigms:]
@@ -126,20 +126,37 @@
 
 	\item
 	\headerrow
+		{\textbf{AppDirect}}
+		{\textbf{Montr\'{e}al, QC}}
+	\\
+	\headerrow
+		{\emph{Senior Software Developer}}
+		{\emph{August 2016 -- Current}}
+	\begin{description*}
+                \item[Technologies used:] Java/Spring, Kubernetes, SQL, Javascript, RabbitMQ
+	\end{description*}
+	\begin{itemize*}
+                \item AppDirect is a SaaS company powering digital transactions for large enterprise software companies
+                \item Rewrote a large legacy integration to Microsoft CSP program into a SpringBoot Micro Service leading to significant reduced support cost and quicker feature implementation
+                \item Lead the implementation in collaboration with Microsoft of a secure Multi Tenant Authorization scheme
+	\end{itemize*}
+
+	\item
+	\headerrow
 		{\textbf{OMSignal Inc.}}
 		{\textbf{Montr\'{e}al, QC}}
 	\\
 	\headerrow
 		{\emph{Full Stack Software Developer}}
-		{\emph{March 2015 -- Current}}
+		{\emph{March 2015 -- August 2016}}
 	\begin{description*}
                 \item[Technologies used:] Scala/Akka, ObjectiveC/Swift, Go, Javascript/React, D3.js, Docker, Kafka, MongoDB
 	\end{description*}
 	\begin{itemize*}
                 \item OMsignal is a wearable tech company with an ios app that tracks the user's biometric signals
-                \item Lead the design and implementation of new algorithms processing backend which lead to improved processing times of 90\%
+                \item Lead the design and implementation of new data processing pipeline which lead to improved processing times of 90\%
                 \item Led the implementation of Key Performance Indicators based on the data from our backend to gain insight into features improving user retention
-                \item Devised and implemented interconnection from the ios app and backend to third party services such as Strava, Nike+ and UnderArmour
+                \item Devised and implemented complex integration of an ios app and backend to third party services such as Strava, Nike+ and UnderArmour
 	\end{itemize*}
         % End of Job
 
